# claude_mesh

./: AGENTS.md  CMakeLists.txt  meshgateway.conf.example
.cache/clangd/index/: admin.pb-c.c.288DA43331008880.idx  admin.pb-c.c.552231568F9FD525.idx  admin.pb-c.h.1C563E26102ED64A.idx  admin.pb-c.h.506600AA19C0F081.idx  admin_builder.c.1AC23AB68F4F1647.idx  admin_builder.h.DB53112D7CC00F89.idx  apponly.pb-c.c.642EB6CDD88A1563.idx  apponly.pb-c.c.734E0AA35857A7BA.idx  apponly.pb-c.h.0E9B711B81DE519D.idx  apponly.pb-c.h.989F596FE1D8CB4A.idx  atak.pb-c.c.41A18F633F261B5F.idx  atak.pb-c.c.80FF82C7899EBF78.idx  atak.pb-c.h.0E0CDD0C83F7D94B.idx  atak.pb-c.h.B2A38D28B296ADA3.idx  cJSON.c.53DC3859CB4F7FBE.idx  cJSON.h.20CB6030CBE353B4.idx  cannedmessages.pb-c.c.66AA7F542FACF729.idx  cannedmessages.pb-c.c.6C3B838343237E07.idx  cannedmessages.pb-c.h.40D819F5BC69060D.idx  cannedmessages.pb-c.h.9568AFA5F66742C5.idx  channel.pb-c.c.90F3F8BC626ACA26.idx  channel.pb-c.c.E0EBABD549C3478D.idx  channel.pb-c.h.38DB3D0DE5CE2A73.idx  channel.pb-c.h.E5CDD293767368B9.idx  clientonly.pb-c.c.0FA0F018991E25C1.idx  clientonly.pb-c.c.16CD9CD01E58C06F.idx  clientonly.pb-c.h.8898BCD17B03813B.idx  clientonly.pb-c.h.D974626E281147B4.idx  command_handler.c.6D57B76844E3B450.idx  command_handler.c.D0F6EB19A9D7D703.idx  command_handler.h.2F75234590A8FF8A.idx  command_handler.h.58C72D709B67F7E5.idx  config.c.19794FAD7EA9C923.idx  config.c.D8BF62081E33C0D9.idx  config.h.242E869EA9661D28.idx  config.h.660DB9E551B36936.idx  config.pb-c.c.11464CC2B9259BF5.idx  config.pb-c.c.39C7D4FEC84CF400.idx  config.pb-c.h.AA70AFAEE5DD134C.idx  config.pb-c.h.E9247DE489D269D2.idx  (+118 more)
doc/: 设计需求补充.md
doc/plan/: PROJECT_PLAN.md  PROJECT_PLAN_VALIDATION.md
doc/spec/: 01_帧协议规范.md  02_解析器内核设计.md  03_构造器内核设计.md  04_扩展协议规范.md  05_心跳与连接管理.md  README.md
doc/spec/gateway/: 01_系统架构设计.md  02_后台服务设计.md  03_Socket通信协议.md  04_CLI工具设计.md  05_UI客户端接口.md  06_部署与运维.md  README.md
doc/user/: README.md  S31B-MS产品规格书.md  S31B-MS常见问题FAQ.md  S31B-MS快速上手指南.md  S31B-MS网络部署指南.md
libmeshcore/: CMakeLists.txt
libmeshcore/include/: admin_builder.h  frame_builder.h  frame_parser.h  heartbeat.h  mesh_types.h  node_manager.h  proto_builder.h  proto_parser.h  serial_port.h
libmeshcore/src/: admin_builder.c  frame_builder.c  frame_parser.c  heartbeat.c  node_manager.c  proto_builder.c  proto_parser.c  serial_port.c
meshgate-cli/: CMakeLists.txt
meshgate-cli/src/: main.c  output_format.c  output_format.h  tcp_client.c  tcp_client.h
meshgateway/: CMakeLists.txt
meshgateway-ui/: index.html  package-lock.json  package.json  vite.config.js
meshgateway-ui/src/: App.vue  style.css
meshgateway-ui/src/composables/: useGateway.js
meshgateway-ui/src/views/: Dashboard.vue  Messages.vue  Monitor.vue  Nodes.vue
meshgateway/src/: command_handler.c  command_handler.h  config.c  config.h  event_loop.c  event_loop.h  log.c  log.h  main.c  tcp_server.c  tcp_server.h  web_server.c  web_server.h
meshgateway/static/: index.html
meshgateway/static/assets/: index-BcA7YhDb.css  index-Cc0FuzNc.js
protobufs_protobuf-c/: nanopb.pb-c.c  nanopb.pb-c.h
protobufs_protobuf-c/google/protobuf/: any.pb-c.h  api.pb-c.c  api.pb-c.h  descriptor.pb-c.c  empty.pb-c.h  field_mask.pb-c.h  timestamp.pb-c.h  wrappers.pb-c.c  wrappers.pb-c.h
protobufs_protobuf-c/google/protobuf/compiler/: plugin.pb-c.c  plugin.pb-c.h
protobufs_protobuf-c/meshtastic/: admin.pb-c.c  admin.pb-c.h  apponly.pb-c.c  apponly.pb-c.h  atak.pb-c.c  atak.pb-c.h  cannedmessages.pb-c.c  cannedmessages.pb-c.h  channel.pb-c.c  channel.pb-c.h  clientonly.pb-c.c  clientonly.pb-c.h  config.pb-c.c  config.pb-c.h  connection_status.pb-c.c  connection_status.pb-c.h  deviceonly.pb-c.c  deviceonly.pb-c.h  localonly.pb-c.c  localonly.pb-c.h  mesh.pb-c.c  mesh.pb-c.h  module_config.pb-c.c  module_config.pb-c.h  mqtt.pb-c.c  mqtt.pb-c.h  paxcount.pb-c.c  paxcount.pb-c.h  portnums.pb-c.c  portnums.pb-c.h  powermon.pb-c.c  powermon.pb-c.h  remote_hardware.pb-c.c  remote_hardware.pb-c.h  rtttl.pb-c.c  rtttl.pb-c.h  storeforward.pb-c.c  storeforward.pb-c.h  telemetry.pb-c.c  telemetry.pb-c.h  (+2 more)
protobufs_protobuf-c/thingseye/: privateconfig.pb-c.c  privateconfig.pb-c.h
protoc-34.1-osx-aarch_64/include/google/protobuf/: any.pb-c.c  descriptor.pb-c.h  duration.pb-c.c  duration.pb-c.h  empty.pb-c.c  field_mask.pb-c.c  source_context.pb-c.c  source_context.pb-c.h  struct.pb-c.c  struct.pb-c.h  timestamp.pb-c.c  type.pb-c.c  type.pb-c.h
