cmake_minimum_required(VERSION 3.15)
project(claude_mesh C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
if(WIN32)
    add_definitions(-D_WIN32_WINNT=0x0601)
    set(PLATFORM_LIBS ws2_32)
else()
    set(PLATFORM_LIBS pthread m)
endif()
if(MSVC)
    add_compile_options(/W3)
else()
    add_compile_options(-Wall -Wextra -Wno-unused-parameter)
endif()
set(PROTOBUF_C_SRC_DIR ${CMAKE_SOURCE_DIR}/protobuf-c-master/protobuf-c)
add_library(protobuf-c-runtime STATIC
    ${PROTOBUF_C_SRC_DIR}/protobuf-c.c
)
target_include_directories(protobuf-c-runtime PUBLIC ${CMAKE_SOURCE_DIR}/protobuf-c-master)
# 直接设置变量，子目录自动继承（不使用 PARENT_SCOPE）
set(PROTOBUF_C_RUNTIME_LIB protobuf-c-runtime)
set(PROTOBUF_C_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/protobuf-c-master)
set(PROTO_DIR ${CMAKE_SOURCE_DIR}/protobufs_protobuf-c)
add_subdirectory(libmeshcore)
add_subdirectory(meshgateway)
add_subdirectory(meshgate-cli)
install(TARGETS meshgateway meshgate-cli RUNTIME DESTINATION bin)
install(FILES meshgateway.conf.example DESTINATION etc RENAME meshgateway.conf)